--- a/buildspec2.yml
+++ b/buildspec2.yml
@@ -1,1 +1,23 @@
-<p>3rd</p>
+version: 0.2
+
+phases:
+  install:
+    # Install any dependencies required for pre-processing (e.g., minifiers)
+    commands:
+      - echo Installing dependencies...
+      - # Install commands here (e.g., npm install)
+
+  pre_build:
+    # Pre-process the index.html file (optional)
+    commands:
+      - echo Pre-processing index.html...
+      - # Commands to pre-process (e.g., minify HTML)
+
+  build:
+    commands:
+      - echo Building index.html...
+      - cp 1.html output2.html  # Replace with your desired output filename
+
+artifacts:
+  files:
+    - output2.html  # Replace with your desired output filename
