--- a/buildspec2.yml
+++ b/buildspec2.yml
@@ -2,22 +2,14 @@ version: 0.2
 
 phases:
   install:
-    # Install any dependencies required for pre-processing (e.g., minifiers)
     commands:
-      - echo Installing dependencies...
-      - # Install commands here (e.g., npm install)
-
+      - echo "Install phase"
   pre_build:
-    # Pre-process the index.html file (optional)
     commands:
-      - echo Pre-processing index.html...
-      - # Commands to pre-process (e.g., minify HTML)
-
+      - if [ "$SKIP_BUILD" == "true" ]; then exit 0; fi
   build:
     commands:
-      - echo Building index.html...
-      - cp 2.html output2.html  # Replace with your desired output filename
-
-artifacts:
-  files:
-    - output2.html  # Replace with your desired output filename
+      - echo "Running build"
+  post_build:
+    commands:
+      - echo "Post-build phase"
